fix: admonition block overlap float image. #69

--- a/static/css/contents/admonition.css
+++ b/static/css/contents/admonition.css
@@ -82,6 +82,8 @@
   --color-3: var(--accent-9);
   --color-4: var(--accent-a11);
 
+  display: flex;
+  flex-direction: column;
   position: relative;
   padding: 0.825rem 1rem;
   margin-top: 1rem;
